<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.daniel.JoyRent.login.widget.TranslucentScrollView
        android:id="@+id/pullzoom_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay_header"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:background="@mipmap/bg_banner_my"
                android:orientation="vertical">

                <View
                    android:id="@+id/v_statusbar"
                    android:layout_width="match_parent"
                    android:layout_height="0.0dp"
                    android:background="@color/translate" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="137dp"
                        android:layout_height="137dp"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/bg_avatar">

                        <ImageView

                            android:id="@+id/img_avatar"
                            android:layout_width="105dp"
                            android:layout_height="105dp"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            android:src="@mipmap/dft_avatar" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/text_white"
                            android:layout_gravity="center_horizontal"
                            android:text="点击更换头像"

                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_email"
                            style="@style/text_white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp"
                            android:text="你的邮箱"
                            android:textSize="13sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:id="@+id/lay_car"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_sign" />

                    <TextView
                        style="@style/text_black"
                        android:layout_marginTop="5dp"
                        android:text="xxxx" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_history"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_consume_history" />

                    <TextView
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="xxxx" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_wallet"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_wallet" />

                    <TextView
                        style="@style/text_black"
                        android:layout_marginTop="5dp"
                        android:text="@string/wallet" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/bg_main" />

                <LinearLayout
                    android:id="@+id/lay_sign"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/ic_sign" />

                    <TextView
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="0.8"
                        android:text="@string/sign" />

                    <TextView
                        android:id="@+id/detail_name"
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                       android:paddingRight="10dp"


                        android:textColor="@color/gray_dft"
                        android:textSize="13sp"


                       />


                </LinearLayout>

                <View
                    style="@style/horizontal_divider_light"
                    android:layout_marginLeft="16dp"  />

                <LinearLayout
                    android:id="@+id/lay_address"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/ic_sign" />

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="0.8"
                        android:text="@string/receive_address" />

                    <TextView
                        android:id="@+id/detail_sex"
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"

                      android:paddingRight="10dp"

                        android:textColor="@color/gray_dft"
                        android:textSize="13sp"

                        />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/bg_main" />

                <LinearLayout
                    android:id="@+id/lay_agent"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/ic_sign" />

                    <TextView
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="1"
                        android:text="手机号" />

                    <TextView
                        android:id="@+id/detail_phone"
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="190dp"
                        android:layout_weight="0.11"
                        android:text="请登录"
                        android:textColor="@color/gray_dft"
                        android:textSize="13sp"

                        tools:text="   " />

                </LinearLayout>

                <View
                    style="@style/horizontal_divider_light"
                    android:layout_marginLeft="16dp"  />

                <LinearLayout
                    android:id="@+id/lay_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/ic_teacher_my" />

                    <TextView
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="1"
                        android:text="身份证号" />

                    <TextView
                        android:id="@+id/numberCard"
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="100dp"
                        android:layout_weight="0.11"
                        android:text="请登录"
                        android:textColor="@color/gray_dft"
                        android:textSize="13sp"

                        tools:text="  " />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/bg_main" />

                <LinearLayout
                    android:id="@+id/lay_luck"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/ic_sign" />

                    <TextView
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="1"
                        android:text="邮箱" />

                    <TextView
                        android:id="@+id/tv_email1"
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="100dp"
                        android:layout_weight="0.11"
                        android:text="请登录"
                        android:textColor="@color/gray_dft"
                        android:textSize="13sp"

                        tools:text="  " />


                </LinearLayout>

                <View
                    style="@style/horizontal_divider_light"
                    android:layout_marginLeft="16dp"  />



                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/bg_main" />

                <LinearLayout
                    android:id="@+id/lay_set"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/ic_set_my" />

                    <TextView
                        style="@style/text_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="1"
                        android:text="@string/set" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@color/bg_main" />
            </LinearLayout>
        </LinearLayout>
    </com.daniel.JoyRent.login.widget.TranslucentScrollView>
//底部
  <!--  <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/myScrollingContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            &lt;!&ndash; 你要显示的内容 &ndash;&gt;

        </android.support.v4.widget.NestedScrollView>

        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            app:bb_tabXmlResource="@xml/bottombar_tabs"
            app:bb_behavior="shy"/>

    </android.support.design.widget.CoordinatorLayout>-->

</RelativeLayout>